crates/frust-tui/tests/snapshots/snapshots__dap_settings_port_awaiting_restart_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_dap_settings(100, 30, &settings, &DapStatus::Listening\n{ port: 4849, clients: 0, }, 0, None,)"
---
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                                                                                                    
                  ╭ DAP server ──────────────────────────────────────────────────╮                  
                  │                                                              │▓▓                
                  │    Server    127.0.0.1:4849   Stop                           │▓▓                
                  │  ▸ Port      5005█  takes effect on restart                  │▓▓                
                  │    [x] auto-start in an IDE terminal                         │▓▓                
                  │    [x] auto-configure the IDE on start                       │▓▓                
                  │    IDE       ‹ detected: none ›                              │▓▓                
                  │   Generate IDE config now     Close                          │▓▓                
                  │                                                              │▓▓                
                  │  an editor can attach to the address above                   │▓▓                
                  │  Tab move · Space toggle · s start/stop · g gen · Esc close  │▓▓                
                  ╰──────────────────────────────────────────────────────────────╯▓▓                
                    ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓
