crates/frust-tui/tests/snapshots/snapshots__dap_settings_stopped_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │                                                                          
  ▸ huddle               │  Dashboard                                                               
                         │  ━━━━━━━━━━                                                              
 DEVICES ↻ R             │                                                                          
   none found            │  No session running — start a run to open a log tab here.                
                         │                                                                          
 SESSIONS         ╭ DAP server ──────────────────────────────────────────────────╮                  
   none running   │                                                              │▓▓                
                  │  ▸ Server    not running   Start                             │▓▓                
 ACTIONS          │    Port      4849                                            │▓▓                
   New project · n│    [x] auto-start in an IDE terminal                         │▓▓                
   Add plugin · a │    [x] auto-configure the IDE on start                       │▓▓                
   Doctor · i     │    IDE       ‹ detected: none ›                              │▓▓                
   Build · b      │   Generate IDE config now     Close                          │▓▓                
   Clean · c      │                                                              │▓▓                
   MCP off · M    │  start it to debug this project from your editor             │▓▓                
   DAP off · D    │  Tab move · Space toggle · s start/stop · g gen · Esc close  │▓▓                
                  ╰──────────────────────────────────────────────────────────────╯▓▓                
                    ▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓▓                
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
● ready  │  o run · b build · i doctor · ⌘ palette · ? help                                [mouse ✓]
