crates/frust-tui/tests/snapshots/snapshots__devtools_connected_performance_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │ [1] Performance  [2] System  [3] Inspector  [4] Network        ● service 
                         │ ━━━━━━━━━━━━━━━                                                          
 DEVICES ↻ r             │                                                                          
   none found            │  Performance — not rendered yet                                          
                         │  frame timing, the 120-frame ring, and the per-frame breakdown           
 SESSIONS                │                                                                          
   huddle                │  0 frame samples collected                                               
   ▸ ▶ desktop           │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │                                                                          
   Doctor · d            │                                                                          
   Build · b             │                                                                          
   Clean · c             │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │ devtools: performance │ [1234][ ] tabs · Esc back to log        [mouse ✓]
● 1 running  │  r run · b build · d doctor · ⌘ palette · ? help                            [mouse ✓]
