crates/frust-tui/tests/snapshots/snapshots__devtools_connecting_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │                                                                          
                         │                                                                          
 DEVICES ↻ R             │                                                                          
   none found            │                                                                          
                         │                                                                          
 SESSIONS                │                                                                          
   huddle                │                                                                          
   ▸ ▶ desktop           │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │                                                                          
   Add plugin · a        │    ⠋  Connecting to devtools service…                                    
   Doctor · i            │    127.0.0.1:53214 · handshake pending                                   
   Build · b             │                                                                          
   Clean                 │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │ devtools: connecting │ Esc back to log                          [mouse ✓]
● 1 running  │  o run · b build · d devtools · ⌘ palette · ? help                          [mouse ✓]
