crates/frust-tui/tests/snapshots/snapshots__devtools_discovering_100x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(100, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                     ▶ Run    ⚒ Build 
━━━━━━━━                                                                                            
                                                                                                    
 PROJECTS                │huddle:  1 ▶ desktop                                                      
  ▸ huddle               │                                                                          
                         │                                                                          
 DEVICES ↻ r             │                                                                          
   none found            │                                                                          
                         │                                                                          
 SESSIONS                │                                                                          
   huddle                │                                                                          
   ▸ ▶ desktop           │                                                                          
                         │                                                                          
 ACTIONS                 │                                                                          
   New project · n       │    ⠋  Waiting for a devtools discovery line…                             
   Add plugin · a        │    no “frust-devtools listening on …” line seen yet — appears            
   Doctor · d            │    the instant a debug/profile build logs it                             
   Build · b             │                                                                          
   Clean · c             │                                                                          
   MCP off · M           │                                                                          
   DAP off · D           │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │                                                                          
                         │ devtools: discovering │ Esc back to log                         [mouse ✓]
● 1 running  │  r run · b build · d devtools · ⌘ palette · ? help                          [mouse ✓]
