crates/frust-tui/tests/snapshots/snapshots__devtools_inspector_fetch_failed_140x30.snap
---
source: crates/frust-tui/tests/snapshots.rs
expression: "render_to_string(140, 30, &state)"
---
⚙ Frust │ huddle ▾ · frust 0.1.0 · ◌ checking…                                                                             ▶ Run    ⚒ Build 
━━━━━━━━                                                                                                                                    
                                                                                                                                            
 PROJECTS                │huddle:  1 ▶ desktop                                                                                              
  ▸ huddle               │ [1] Performance  [2] System  [3] Inspector  [4] Network                                                ● service 
                         │                              ━━━━━━━━━━━━━                                                                       
 DEVICES ↻ R             │ ✗  Could not read the widget tree                                        │ no node selected                      
   none found            │    the devtools connection closed                                        │                                       
                         │    r retries the pull                                                    │                                       
 SESSIONS                │                                                                          │                                       
   huddle                │                                                                          │                                       
   ▸ ▶ desktop           │                                                                          │                                       
                         │                                                                          │                                       
 ACTIONS                 │                                                                          │                                       
   New project · n       │                                                                          │                                       
   Add plugin · a        │                                                                          │                                       
   Doctor · i            │                                                                          │                                       
   Build · b             │                                                                          │                                       
   Clean                 │                                                                          │                                       
   MCP off · M           │                                                                          │                                       
   DAP off · D           │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │                                                                          │                                       
                         │ devtools: inspector │ ↑↓/jk move · →/Enter expand · ← collapse · Tab tree↔props · r refresh · Esc back  [mouse ✓]
● 1 running  │  o run · b build · d devtools · ⌘ palette · ? help                                                                  [mouse ✓]
